--- a/src/styles/index.style.css
+++ b/src/styles/index.style.css
@@ -156,6 +156,9 @@
   .overflow-unset {
     overflow: unset;
   }
+  .bg-gradient-pokemon {
+    background-image: linear-gradient(135deg, hsl(280 70% 55%), hsl(310 80% 65%));
+  }
 }
 
 :root {
